tests/paczka1/fuzzy1/30536363.err
Error in line 1: XaFALum S617 20,7
Error in line 6: S140 S734 63,7
Error in line 10: XjZajG A984 57,7
Error in line 23: eiUSL S617 41,3
Error in line 32: eiUSL A984 57,2
Error in line 30: XjZajG S734 14,4
